-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 4.6.0, 5.2.1, 5.5.0
-
Fix Version/s: 5.7.0 Alpha
-
Component/s: Widgets: Itemviews
-
Labels:None
-
Environment:Linux, KDE but also Qt-only - see testcase
-
Commits:934f06220391eb0e0ebf66a2eb037f48adb4c43c 410aa20f073b5e45e73366773b7d173f840a9cfe
Scrolling in listviews when set to scroll per pixel will scroll either 3 items at a time, or with large items the heigth of the visible part of the listview.
Docs say: QAbstractItemView::ScrollPerPixel - The view will scroll the contents one pixel at a time.
This is especially visible and annoying in KDE when using delegates with big height, as described here:
https://bugs.kde.org/show_bug.cgi?id=188757
(for example KDE's wallpaper list with previews, get hot new stuff dialog)
Attached is a simple qt-only testcase to make the problem visible.
I created a workaround as a starting point to find the right fix.
http://qt.gitorious.org/~frederik/qt/frederiks-qt/commit/4a10fde34c478a512acae113fa7e4d083e36ec16
Cheers
Frederik
- relates to
-
QTBUG-33906 Slow wheel scrolling when scrollPerPixel
-
- Closed
-
- resulted in
-
QTBUG-34953 Regression: Widget Box scrolls only one pixel at a time
-
- Closed
-