Fix scrolling in KNewStuff3 for KDE 4.5

Since http://bugreports.qt.nokia.com/browse/QTBUG-7232 seems to stay open, here is a workaround:
in the wheelEvent, set the step size of the scrollbar, this should be relative to the item heigt.

void ItemsView::wheelEvent(QWheelEvent* event)
{
    // this is a workaround because scrolling by mouse wheel is broken in Qt list views for big items
    verticalScrollBar()->setSingleStep(itemHeight / 10);
    QListView::wheelEvent(event);
}

CCBUG: 188757


svn path=/trunk/KDE/kdelibs/; revision=1109982